--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: ^5.0.0
+  flutter_svg: ^2.0.7
 
 
 
@@ -34,7 +35,18 @@ dev_dependencies:
 
 flutter:
 
+
+
+
   
   uses-material-design: true
+
+
+  assets:
+    - assets/
+
+
+
+
 
 
