--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/nav_bar_icons/
-    - asset/specialNeedsSvg/
+    - assets/specialNeedsSvg/
 
 
 
