--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,13 @@ dependencies:
   google_fonts: ^5.0.0
   flutter_svg: ^2.0.7
 
+  #Firebase tools
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+
+
+
+
 
 
   injectable: ^2.1.2
