--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   injectable: ^2.1.2
   flutter_screenutil: ^5.8.4
   dropdown_button2: ^2.1.4
+  flutter_localizations:
+    sdk: flutter
+  intl: any
   
 
 dev_dependencies:
