--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   go_router: ^8.0.5
 
 
+ #State manger
+  flutter_bloc: ^8.1.3
+
+  #Utils
   injectable: ^2.1.2
   flutter_screenutil: ^5.8.4
   dropdown_button2: ^2.1.4
