--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   flutter_bloc: ^8.1.3
 
   #Utils
+  flutter_swipe_action_cell: ^3.1.1
   injectable: ^2.1.2
   flutter_screenutil: ^5.8.4
   dropdown_button2: ^2.1.4
   flutter_localizations:
+
 
     sdk: flutter
   intl: any
