--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   #Utils
   line_icons: ^2.0.1
   google_nav_bar: ^5.0.6
+
   flutter_swipe_action_cell: ^3.1.1
   injectable: ^2.1.2
   flutter_screenutil: ^5.8.4
   dropdown_button2: ^2.1.4
+  platform_info: ^4.0.0
   flutter_localizations:
 
 
