--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   injectable: ^2.1.2
   flutter_screenutil: ^5.8.4
   dropdown_button2: ^2.1.4
+  dio: ^5.2.1+1
   platform_info: ^4.0.0
   flutter_localizations:
 
