--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
     sdk: flutter
   intl: any
   flutter_local_notifications: ^14.1.1
+  flutter_smart_dialog: ^4.9.2
+  extended_masked_text: ^2.3.1
 
   
 
