--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   google_fonts: ^5.0.0
   flutter_svg: ^2.0.7
 
+
+  json_annotation: ^4.8.1
+
   #Firebase tools
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
@@ -65,6 +68,9 @@ dev_dependencies:
 
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.5
+  json_serializable: ^6.7.0
+
 
 
 flutter:
