--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.0.0
   flutter_svg: ^2.0.7
+  provider: ^6.0.5
 
 
   json_annotation: ^4.8.1
