--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,13 @@ dependencies:
 
 
     sdk: flutter
-  intl: any
+  intl: ^0.18.0
   flutter_local_notifications: ^14.1.1
   flutter_smart_dialog: ^4.9.2
   extended_masked_text: ^2.3.1
+  another_flushbar: ^1.12.30
+  injectable_generator: ^2.1.6
+  get_it: ^7.6.0
 
   
 
@@ -65,6 +68,7 @@ dev_dependencies:
 
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.5
 
 
 flutter:
